minor adjustments to font sizes on mobile + form padding fixed

--- a/styles/compiled-styles.css
+++ b/styles/compiled-styles.css
@@ -801,7 +801,8 @@ body {
     text-align: center;
     top: 30px;
     box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.2);
-    transition: 300ms; }
+    transition: 300ms;
+    z-index: 20; }
     .nav .nav-links, .nav-secondary .nav-links {
       display: none; }
       .nav .nav-links ul, .nav-secondary .nav-links ul {
@@ -852,7 +853,7 @@ body {
   .card-container {
     position: relative;
     margin-top: 850px;
-    width: 95%;
+    width: 85% !important;
     grid-template-columns: repeat(1, 1fr) !important;
     grid-gap: 0px !important; }
     .card-container .card {
@@ -862,7 +863,8 @@ body {
       .card-container .card:hover {
         margin-top: 0px !important; }
       .card-container .card h2 {
-        font-size: 18px !important; }
+        font-size: 18px !important;
+        font-weight: bold; }
       .card-container .card .icon {
         width: 40px !important;
         height: 40px !important;
@@ -875,7 +877,8 @@ body {
     margin-top: 820px !important;
     grid-template-columns: 1fr !important;
     position: relative;
-    text-align: center; }
+    text-align: center;
+    width: 85% !important; }
     .about-us h2 {
       font-size: 24px !important;
       font-weight: bold;
@@ -886,15 +889,20 @@ body {
         background-color: white;
         border-radius: 0px !important;
         padding-bottom: 30px; }
+    .about-us .form {
+      padding-right: 0px !important; }
     .about-us .quote-forms {
       margin-top: 0px;
       border-radius: 0px 0px 15px 15px !important; }
 
   .service-box {
-    padding: 30px 50px 50px 50px;
+    padding: 30px 0px 30px 0px;
     grid-template-columns: 1fr !important;
     position: relative;
-    text-align: center; }
+    text-align: center;
+    width: 85% !important;
+    margin-left: auto;
+    margin-right: auto; }
     .service-box .service-box-text {
       border-radius: 15px 15px 0px 0px; }
       .service-box .service-box-text h2 {
@@ -995,7 +1003,12 @@ body {
     height: 60px !important; }
 
   .mobile-banner {
-    display: block; } }
+    display: block; }
+
+  .divider {
+    height: 1px !important; }
+    .divider span {
+      font-size: 20px !important; } }
 /*@media only screen and (max-width: 1000px) {
   body {
     background-color: red !important;
