--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1154,6 +1154,7 @@ body {
     top: $topbarHeight;
     box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.2);
     transition: 300ms;
+    z-index: 20;
 
     .nav-links {
       display: none;
@@ -1220,7 +1221,7 @@ body {
   .card-container {
     position: relative;
     margin-top: 850px;
-    width: 95%;
+    width: 85% !important;
     grid-template-columns: repeat(1, 1fr) !important;
     grid-gap: 0px !important;
     //margin-left: auto !important;
@@ -1242,6 +1243,7 @@ body {
 
       h2 {
         font-size: 18px !important;
+        font-weight: bold;
       }
 
       .icon {
@@ -1261,6 +1263,7 @@ body {
     grid-template-columns: 1fr !important;
     position: relative;
     text-align: center;
+    width: 85% !important;
 
     h2 {
       font-size: 24px !important;
@@ -1278,6 +1281,10 @@ body {
       }
     }
 
+    .form {
+      padding-right: 0px !important;
+    }
+
     .quote-forms {
       margin-top: 0px;
       border-radius: 0px 0px 15px 15px !important;
@@ -1286,10 +1293,13 @@ body {
 
   .service-box {
     //margin-top: -50px !important;
-    padding: 30px 50px 50px 50px;
+    padding: 30px 0px 30px 0px;
     grid-template-columns: 1fr !important;
     position: relative;
     text-align: center;
+    width: 85% !important;
+    margin-left: auto;
+    margin-right: auto;
 
     .service-box-text {
       border-radius: 15px 15px 0px 0px;
@@ -1453,6 +1463,14 @@ body {
 
   .mobile-banner {
     display: block;
+  }
+
+  .divider {
+    height: 1px !important;
+
+    span {
+      font-size: 20px !important;
+    }
   }
 }
 
